# ai-study-project

./: .gitignore  README.md  memo.md  note.ipynb  pyproject.toml  todoList.md
docs/: example-selector.md  how-to-upgarde-python.md  installed-package.md  jupiter-shortcut.md  memory.md  reinstall-poetry.md  taddy-note-library.md  terms.md  의문점-summary.md
docs/jupiters/: ChatOpenAI.ipynb  prompt.ipynb  retriever.ipynb
docs/jupiters/12-RAG/: 00-RAG-Basic-PDF.ipynb
docs/reference_codes/: custom_example_selector.py
docs/setup/: reinstall-poetry.md  setup-virtual-env.md
my-stramlit-project/: .gitignore  main.py
