[tool.poetry]
name = "ai-study-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false  # run as script mode

[tool.poetry.dependencies]
python = "^3.11"
# torch = "^2.5.1" # mac m chip 일 경우, torch install 가 실패하므로, pip 로 설치

# Required Package
python-dotenv = "^1.0.1"

# Langchain for llm
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-experimental = "^0.3.4"
langchain-community = "^0.3.14"
huggingface-hub = "^0.27.1"
langchain-openai = "^0.3.0"
langchain-anthropic = "^0.3.1"
langchain-cohere = "^0.3.4"
langchain-elasticsearch = "^0.3.0"
langchain-chroma = "^0.2.0"
langchain-milvus = "^0.1.8"
langchain-google = "^0.1.1"

# LLM Provider
openai = "^1.59.7"
deepl = "^1.21.0"
kiwipiepy = "^0.20.3"
konlpy = "^0.6.0"

# data process and analysis
pandas = "^2.2.3"
rank-bm25 = "^0.2.2"

# database and cache
redis = "^5.2.1"
chromadb = "0.5.23"

# pdf and file process
pymupdf = "^1.25.1"
pypdf = "^5.1.0"
pdfplumber = "^0.11.5"
pdfminer-six = "20231228"
pymupdf4llm = "^0.0.17"

# visualize and user interface
matplotlib = "^3.10.0"
streamlit = "^1.41.1"
jupyter = "^1.1.1"
notebook = "^7.3.2"

# deep learning and machine learning


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
