[tool.poetry]
name = "ai-study-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false  # run as script mode

[tool.poetry.dependencies]
python = ">=3.11.6,<3.12"

# Required Package
python-dotenv = "^1.0.1"

# LLM Provider
openai = "^1.59.7"
deepl = "^1.21.0"
kiwipiepy = "^0.20.3"
konlpy = "^0.6.0"
huggingface-hub = "^0.27.1"

# Langchain for llm
langchain = "^0.3.14"
langchain-core = "^0.3.29"
langchain-experimental = "^0.3.4"
langchain-community = "^0.3.14"
langchain-openai = "^0.3.0"
langchain-anthropic = "^0.3.1"
langchain-cohere = "^0.3.4"
langchain-elasticsearch = "^0.3.0"
langchain-chroma = "^0.2.0"
langchain-milvus = "^0.1.8"
langchain-google = "^0.1.1"
langchain-huggingface = "^0.1.2"
langchain-upstage = "^0.6.0"

# data process and analysis
pandas = "^2.2.3"
rank-bm25 = "^0.2.2"

# database and cache
redis = "^5.2.1"
chromadb = "0.5.23"

# pdf and file process
pymupdf = "^1.25.1"
pypdf = "^4.3.1" # langchain-upstage ã® dependency
pdfplumber = "^0.11.5"
pdfminer-six = "20231228"
pymupdf4llm = "^0.0.17"

# visualize and user interface
matplotlib = "^3.10.0"
streamlit = "^1.41.1"
jupyter = "^1.1.1"
notebook = "^7.3.2"

# deep learning and machine learning
torch = "^2.5.1"
torchvision = "^0.20.1"
faiss-cpu = "^1.9.0.post1"
open-clip-torch = "^2.30.0"

# Utils
pydantic = "^2.10.5"
lxml = "^5.3.0"
pillow = "^11.1.0"
lark = "^1.2.2"
ragas = "^0.2.12"
unstructured = {extras = ["all-docs"], version = "^0.16.14"}
arxiv = "^2.1.3"
tiktoken = "^0.8.0"
tenacity = "^9.0.0"
pymilvus = "^2.5.3"
google-search-results = "^2.4.2"
protobuf = "^5.29.3"
sqlalchemy = "^2.0.37"
llama-index-core = "^0.12.12"
llama-parse = "^0.5.19"
flashrank = "^0.2.10"
docx2txt = "^0.8"
nest-asyncio = "^1.6.0"
rapidocr-onnxruntime = "^1.4.4"
seaborn = "^0.13.2"
grandalf = "^0.8"
rouge-score = "^0.1.2"
langchain-ollama = "^0.2.2"
mypy = "^1.14.1"
pinecone = "^5.4.2"
wikipedia = "^1.4.0"
scikit-learn = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
